finished, just need to add more images

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <video autoplay muted loop id="videoOzadje">
-    <source src="particles.mp4" type="video/mp4">
+    <source src="particles-com.mp4" type="video/mp4">
 </video>
 
 <app-home *ngIf="state==='home'" (start)="state='quiz'"></app-home>
