--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,8 @@
 <div class="home">
-    <video autoplay muted loop id="videoOzadje">
-        <source src="particles-com.mp4" type="video/mp4">
-    </video>
-
     <div id="wrapper">
+
+        <img src="infosek-logo.png" alt="Infosek 2025" id="infosek-logo">
+
         <h1 id="welcome-heading">AI ALI NE?</h1>
         <p id="welcome-text">Menite, da lahko prepoznate slike, ustvarjene z <span id="span-green-text">umetno inteligenco</span>?<br>Preizkusite se v kvizu in osvojite <span id="span-green-text">nagrado</span>!</p>
         <button class="pulsing" id="btn-start" (click)="start.emit()" (click)="playClickSound()">Prični</button>
