--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -24,3 +24,11 @@
 #btn-start {
     margin-top: 30px;
 }
+
+#infosek-logo {
+    position: absolute;
+    top: 0;
+    margin-top: 100px;
+    width: 600px;
+    height: auto;
+}
