--- a/src/app/components/result/result.component.html
+++ b/src/app/components/result/result.component.html
@@ -1,6 +1,8 @@
 <div id="wrapper">
     
     <div id="stars">
+        <span *ngIf="score === 7">⭐⭐⭐⭐⭐⭐⭐</span>
+        <span *ngIf="score === 6">⭐⭐⭐⭐⭐⭐</span>
         <span *ngIf="score === 5">⭐⭐⭐⭐⭐</span>
         <span *ngIf="score === 4">⭐⭐⭐⭐</span>
         <span *ngIf="score === 3">⭐⭐⭐</span>
@@ -10,6 +12,6 @@
     </div>
 
     <h1>Hvala za sodelovanje!</h1>
-    <p>Pravilno ste prepoznali <strong>{{ score }} od 5 slik.</strong></p>
+    <p>Pravilno ste prepoznali <strong>{{ score }} od 7 slik.</strong></p>
     <button (click)="back()" (click)="playClickSound()">Na začetek</button>
 </div>
