--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,6 +21,7 @@ html {
     overflow-y: hidden;
     font-family: 'Roboto', sans-serif;
     font-weight: 100;
+    user-select: none;
 }
 
 h1, h2, h3, h4, h5 {
@@ -45,15 +46,4 @@ button {
 #span-green-text {
     color: #2ED60F;
     font-weight: 600;
-}
-
-#videoOzadje {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
-    filter: blur(30px);
-    opacity: 0.7;
-    z-index: -1;
 }
