--- a/src/app/components/quiz/quiz.component.scss
+++ b/src/app/components/quiz/quiz.component.scss
@@ -12,17 +12,18 @@ img {
   height: 800px;
   width: auto;
   border-radius: 10px;
+  // border: 5px solid white;
 }
 
 .btns-row {
   position: absolute;
   bottom: 0;
-  margin-bottom: 25px;
+  margin-bottom: 50px;
   width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  gap: 75px;
+  gap: 20px;
 }
 
 .btns-row button {
