--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -18,6 +18,7 @@
     font-size: 1.3rem;
     font-weight: 100;
     text-align: center;
+    width: max-content;
     margin: 0;
 }
 
@@ -31,4 +32,36 @@
     margin-top: 100px;
     width: 600px;
     height: auto;
+}
+
+.lang-select {
+    position: absolute;
+    width: 100vw;
+    height: fit-content;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1em;
+    margin-bottom: 8em;
+}
+
+.language-button {
+    display: flex;
+    justify-content: center;
+    padding: 0;
+    overflow: hidden;
+    object-fit: cover;
+    border-radius: 50%;
+    background-color: transparent;
+    width: 4.5em;
+    height: 4.5em;
+    border: 4px solid white;
+    -webkit-box-shadow: 0px 7px 17px 0px rgba(0,0,0,0.25);
+    -moz-box-shadow: 0px 7px 17px 0px rgba(0,0,0,0.25);
+    box-shadow: 0px 7px 17px 0px rgba(0,0,0,0.25);
+}
+
+#f-sl {
+  margin-left: 2.5em;
 }
